# PostGen

./: .gitignore  Makefile  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  pyproject.toml  requirements.txt
backend/app/: config.py  database.py  main.py
backend/app/models/: draft.py  post.py  settings.py  user.py
backend/app/routers/: auth.py  drafts.py  generate.py  history.py  linkedin.py  settings.py
backend/app/services/: image_service.py  langgraph_chain.py  linkedin_service.py  s3_service.py
backend/app/utils/: auth.py
frontend/: Dockerfile  package-lock.json  package.json
frontend-next/src/app/: globals.css  layout.tsx  page.tsx
frontend-next/src/app/drafts/: page.tsx
frontend-next/src/app/history/: page.tsx
frontend-next/src/app/settings/: page.tsx
frontend-next/src/components/common/: Dropdown.tsx  IconButton.tsx  TagInput.tsx
frontend-next/src/components/create/: GenerateButton.tsx  ImagePanel.tsx  ImageStyleSelector.tsx  ImageThumbnails.tsx  InputPanel.tsx  PostEditor.tsx  RichToolbar.tsx  TopicInput.tsx
frontend-next/src/components/drafts/: DraftCard.tsx
frontend-next/src/components/history/: PostCard.tsx
frontend-next/src/hooks/: useDrafts.ts  useGenerateImage.ts
frontend-next/src/store/: appStore.ts
frontend-next/src/types/: index.ts
frontend/src/: App.tsx  index.css
frontend/src/hooks/: useDrafts.ts  useGenerateImage.ts  useGeneratePost.ts  useLinkedIn.ts
frontend/src/pages/: CreatePost.tsx  Drafts.tsx  History.tsx  Settings.tsx
frontend/src/store/: appStore.ts
frontend/src/types/: index.ts
(+21 files in other folders)
