[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3==1.38.29",
    "fastapi==0.115.12",
    "google-genai==1.16.1",
    "httpx==0.28.1",
    "langchain-google-genai==2.1.4",
    "langgraph==0.4.7",
    "motor==3.7.0",
    "pillow==11.2.1",
    "pydantic-settings==2.9.1",
    "pymongo==4.12.1",
    "python-dotenv==1.1.0",
    "python-jose[cryptography]==3.4.0",
    "python-multipart==0.0.20",
    "uvicorn[standard]==0.34.3",
]
